* Workarounded a bug in gtk_file_chooser_set_file() function (patch from
    Simon Long).

* Fixed single instance options cleanup that might affect next call.

* Fixed wrong update of status text after folder update when there are
    selected files in the folder.


Changes on 1.2.3 since 1.2.2:

* Disabled unrequested config save on changing dir if show_hidden changes.

* Replaced deprecated atk_component_get_position() calls.

* Fixed invalid callback get_image_position() on ATK icon, it could loop
    and therefore hang the application.

* Increased delay on restoring scroller position from 20 to 50 ms.


Changes on 1.2.2 since 1.2.1:

* Fixed Ctrl+- and Ctrl+= key combinations for zooming.

* Fixed compilation with libfm 1.1.x.

* Disabled showing items on desktop that are being dragged, they should
    be at the mouse cursor, visually dragged instead.

* Fixed setting of custom settings on wrong folders which were set on
    directory change where show hidden flag was different.


Changes on 1.2.1 since 1.2.0:

* Fixed update desktop config from old settings.

* Fixed 'Edit'->'Rename' menu item, it should be inactive if rename isn't
    supported.

* Fixed install and uninstall for modules directory.

* Port number shouldn't be added in Connect to Server dialog if port is
    default one.

* Got rid of possible memory exhausting after changing wallpaper.

* Fixed icons positioning when upper reserved area is not 0.

* Fixed resetting cursor in location bar to beginning after navigation.

* Corrected folder popup update on folder loading so context menu is now
    correct for the folder shown.

* Fixed dragging and dropping icons behavior on desktop.

* Correctly use screen number to display all the windows.

* Added "System;FileTools;" into Categories for pcmanfm.desktop, those
    are recommended categories for the FileManager one.

* Reordered 'View' menu items a bit to conform with HIG.
