@@ -6,6 +6,9 @@
 * Fixed wrong update of status text after folder update when there are
     selected files in the folder.
 
+* Forced desktop background repaint after style change if background set
+    to solid color.
+
 
 Changes on 1.2.3 since 1.2.2:
 
